<resources>
    <string name="play_list">Songs</string>
    <string name="lyrics">Lyrics</string>
    <string name="not_found">not found</string>
    <string name="loading">loading...</string>
    <string name="app_name">Kumalrc</string>
    <string name="title_activity_guide">GuideActivity</string>

    <string name="action_settings">Settings</string>
    <string name="guide">swip right to see lyrics, press return button to remove this guide</string>
    <string name="song">song</string>
    <string name="artist">artist</string>
    <string name="sleep_mode">sleep mode</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="end">End</string>
    <string name="shuffle">Shuffle</string>
    <string name="shutdown">"will shut down after "</string>
    <string name="cancel_sleep">canceled sleep mode</string>
    <string name="delete">delete</string>
    <string name="in_order">in order</string>
    <string name="rescan">rescan audio file</string>
    <string name="scan">scan</string>
    <string-array name="songs_filter">
        <item>All Songs</item>
        <item>Artist</item>
        <item>Album</item>
        <item>Playlist</item>
        <item>Folder</item>
    </string-array>

    <string-array name="timer_list">
        <item>cancel timer</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
        <item>90 minutes</item>
    </string-array>

    <string name="success">success</string>
    <string name="scanning">scanning</string>
    <string name="scanned">scanned</string>
    <string name="playing">Playing</string>
    <string name="login">login</string>
    <string name="bind_account">bind account</string>
    <string name="save_last">save last playback</string>
    <string name="version">version</string>
    <string name="errcode_success">send successfully</string>
    <string name="errcode_cancel">cancel</string>
    <string name="errcode_deny">deny</string>
    <string name="errcode_unknown">unknown error</string>
    <string name="listening">"I'm listening "</string>
    <string name="share_err">Please install WebChat and make sure network access available.</string>
    <string name="using">I\'m using kumalrc!</string>
</resources>
