<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_scan"
            android:icon="@drawable/search"
            android:title="@string/rescan"/>
    <item
            android:id="@+id/action_in_order"
            android:icon="@drawable/in_order"
            android:title="@string/in_order"/>
    <item
            android:id="@+id/action_shuffle"
            android:icon="@drawable/rand"
            android:title="@string/shuffle"/>
    <item
            android:id="@+id/action_timer"
            android:icon="@drawable/sleep"
            android:title="@string/sleep_mode"/>
    <item
            android:id="@+id/action_share"
            android:icon="@drawable/share"
            android:title="@string/share"/>
    <item
            android:id="@+id/action_setting"
            android:icon="@drawable/setting"
            android:title="@string/action_settings"/>
    <item
            android:id="@+id/action_end"
            android:icon="@drawable/end"
            android:title="@string/end"/>
</menu>
